Fixed website layout bugs

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -442,6 +442,7 @@ body {
   padding:0.5em;
   text-align: center;
   color:#ffffff;
+  margin-top:13em;
 }
 
 .website_anchor{
